--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,4 +1,5 @@
 ha_version: "stable"
+ha_version_override: ""
 
 ha_config_repo: "https://github.com/{{ lookup('env','GITHUB_USERNAME') }}/homelab-config.git"
 ha_config_repo_branch: "main"
