--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -1,15 +1,20 @@
 base_dir: "{{ ansible_env.HOME | default(lookup('env','HOME'), true) }}/homelab/target"
 
+ha_project: "ha-stack-ansible"
 ha_stack_dir:  "{{ base_dir }}/ha-stack-ansible"
 ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
+ha_config_repo_dir: "{{ ansible_env.HOME }}/homelab/config/{{ ha_config_repo_subdir }}"
 
 # Do NOT run in the host-network (conflict otherwise); map to 8124
+ha_user_username: "{{ lookup('env', 'HA_USER_USERNAME') }}"
+ha_user_fullname: "{{ lookup('env', 'HA_USER_FULLNAME') }}"
+ha_user_password: "{{ lookup('env', 'HA_USER_PASSWORD') }}"
 ha_container_name: homeassistant_ansible
 ha_network_mode: bridge
 ha_host_port: 8124
 
-runtime_user:  "{{ lookup('env','RUNTIME_USER')  | default(ansible_user_id, true) }}"
-runtime_group: "{{ lookup('env','RUNTIME_GROUP') | default(ansible_user_gid, true) }}"
+runtime_user:  "{{ ansible_user_id }}"
+runtime_group: "{{ ansible_user_gid }}"
 
 # --- Cloudflared (test) – only active if enable_cloudflared: true ---
 enable_cloudflared: true  # tunnel enabled for this test
@@ -19,5 +24,3 @@ cf_tunnel_id: "{{ lookup('env','CF_TUNNEL_ID') | default('', true) }}"
 cf_hostname:  "{{ lookup('env','CF_HOSTNAME')  | default('', true) }}"
 cf_creds_src: "{{ lookup('env','CF_CREDS_SRC') | default('', true) }}"
 
-ha_project: "ha-stack-ansible"
-ha_config_repo_dir: "{{ lookup('env','HA_CONFIG_REPO') | default((ansible_env.HOME ~ '/homelab/config/homeassistant'), true) }}"
