--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,13 +1,49 @@
+github_pat: "{{ lookup('env','GITHUB_PAT') }}"
+github_username: "{{ lookup('env','GITHUB_USERNAME') }}"
+
+runtime_uid: "{{ ansible_user_uid }}"
+runtime_gid: "{{ ansible_user_gid }}"
+
+base_dir: "{{ ansible_env.HOME | default(lookup('env','HOME'), true) }}/homelab/target"
+
+# --- Homeassistant
 ha_version: "stable"
 ha_version_override: ""
+
+ha_project: "ha-stack-ansible"
+ha_stack_dir:  "{{ base_dir }}/ha-stack-ansible"
+ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
+ha_config_repo_dir: "{{ ansible_env.HOME }}/homelab/config/{{ ha_config_repo_subdir }}"
 
 ha_config_repo: "https://github.com/{{ lookup('env','GITHUB_USERNAME') }}/homelab-config.git"
 ha_config_repo_branch: "main"
 ha_config_repo_subdir: "homeassistant"
 
-github_username: "{{ lookup('env','GITHUB_USERNAME') }}"
-github_pat: "{{ lookup('env','GITHUB_PAT') }}"
+ha_user_username: "{{ lookup('env', 'HA_USER_USERNAME') }}"
+ha_user_fullname: "{{ lookup('env', 'HA_USER_FULLNAME') }}"
+ha_user_password: "{{ lookup('env', 'HA_USER_PASSWORD') }}"
+ha_container_name: homeassistant_ansible
+ha_network_mode: bridge
+ha_host_port: 8124
 
-cf_tunnel_id: "{{ lookup('env','CF_TUNNEL_ID') }}"
-cf_hostname: "{{ lookup('env','CF_HOSTNAME') }}"
-cf_creds_src: "{{ lookup('env','CF_CREDS_SRC') }}"
+# --- Cloudflared (test) – only active if enable_cloudflared: true ---
+enable_cloudflared: true  # tunnel enabled for this test
+
+cf_dir: "{{ ha_stack_dir }}/cloudflared"
+cf_tunnel_id: "{{ lookup('env','CF_TUNNEL_ID') | default('', true) }}"
+cf_hostname:  "{{ lookup('env','CF_HOSTNAME')  | default('', true) }}"
+cf_creds_src: "{{ lookup('env','CF_CREDS_SRC') | default('', true) }}"
+
+# --- Other HA integrations, addon's
+# Feature flags
+enable_esphome: false
+enable_code_server: false
+enable_ssh_terminal: false
+enable_samba: false
+
+# Ports (host-side);
+esphome_port: 6052
+code_server_port: 8443      # linuxserver/code-server default
+ssh_port: 2222
+samba_tcp_445: 445          # change when needed
+samba_tcp_139: 139
