--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -10,14 +10,14 @@ base_dir: "{{ ansible_env.HOME | default(lookup('env','HOME'), true) }}/homelab/
 ha_version: "stable"
 ha_version_override: ""
 
-ha_project: "ha-stack-ansible"
-ha_stack_dir:  "{{ base_dir }}/ha-stack-ansible"
-ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
 ha_config_repo_dir: "{{ ansible_env.HOME }}/homelab/config/{{ ha_config_repo_subdir }}"
+ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
+ha_stack_dir:  "{{ base_dir }}/ha-stack-ansible"
+ha_project: "ha-stack-ansible"
 
 ha_config_repo: "https://github.com/{{ lookup('env','GITHUB_USERNAME') }}/homelab-config.git"
-ha_config_repo_branch: "main"
 ha_config_repo_subdir: "homeassistant"
+ha_config_repo_branch: "main"
 
 ha_user_username: "{{ lookup('env', 'HA_USER_USERNAME') }}"
 ha_user_fullname: "{{ lookup('env', 'HA_USER_FULLNAME') }}"
@@ -26,9 +26,6 @@ ha_container_name: homeassistant_ansible
 ha_network_mode: bridge
 ha_host_port: 8124
 
-# --- Cloudflared (test) – only active if enable_cloudflared: true ---
-enable_cloudflared: true  # tunnel enabled for this test
-
 cf_dir: "{{ ha_stack_dir }}/cloudflared"
 cf_tunnel_id: "{{ lookup('env','CF_TUNNEL_ID') | default('', true) }}"
 cf_hostname:  "{{ lookup('env','CF_HOSTNAME')  | default('', true) }}"
@@ -36,14 +33,19 @@ cf_creds_src: "{{ lookup('env','CF_CREDS_SRC') | default('', true) }}"
 
 # --- Other HA integrations, addon's
 # Feature flags
-enable_esphome: false
-enable_code_server: false
-enable_ssh_terminal: false
-enable_samba: false
+enable_ssh_terminal: true
+enable_cloudflared: true
+enable_code_server: true
+enable_esphome: true
+enable_samba: true
 
 # Ports (host-side);
-esphome_port: 6052
 code_server_port: 8443      # linuxserver/code-server default
-ssh_port: 2222
 samba_tcp_445: 445          # change when needed
 samba_tcp_139: 139
+esphome_port: 6052
+ssh_port: 2222
+
+# Feature vars
+code_server_data_dir: "{{ ha_stack_dir }}/data/code-server"
+ssh_data_dir: "{{ ha_stack_dir }}/data/ssh"
