--- a/site.yml
+++ b/site.yml
@@ -1,12 +1,6 @@
-- hosts: ha
+- hosts: all
   gather_facts: false          # don't gather facts implicitly (avoids sudo)
   vars:
     ansible_python_interpreter: /usr/bin/python3
-
-  pre_tasks:
-    - name: Gather facts without sudo (fast & reliable)
-      setup:
-
   roles:
-    - docker
     - homeassistant
