--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -10,6 +10,7 @@ base_dir: "{{ base_home }}/homelab/target"
 # --- Homeassistant
 ha_version: "stable"
 ha_version_override: ""
+ha_backups_enabled: false
 
 ha_config_repo_dir: "{{ base_home }}/homelab/config/{{ ha_config_repo_subdir }}"
 ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
