--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -10,19 +10,63 @@
       ha_stack_dir={{ ha_stack_dir }}, ha_config_dir={{ ha_config_dir }}.
       Check inventories/group_vars/all.yml.
 
+- name: Validate all critical variables are defined
+  ansible.builtin.assert:
+    that:
+      # Core paths
+      - ha_stack_dir is defined
+      - ha_config_dir is defined
+      - ha_backups_dir is defined
+      - base_dir is defined
+      - base_home is defined
+      # Project config
+      - ha_project is defined
+      - ha_container_name is defined
+      - ha_version is defined
+      # Runtime config
+      - runtime_uid is defined
+      - runtime_gid is defined
+      - tz is defined
+      # Network config
+      - ha_host_port is defined
+      - ha_network_mode is defined
+      # Feature flags
+      - enable_cloudflared is defined
+      - enable_ssh_terminal is defined
+      - enable_code_server is defined
+      - enable_esphome is defined
+      - enable_samba is defined
+      - enable_target_passwordless_sudo is defined
+      - ha_bootstrap_enable is defined
+      # Credentials (checked in env_boot.yml but verify here too)
+      - github_username is defined
+      - github_pat is defined
+    fail_msg: |
+      ❌ CRITICAL VARIABLE(S) MISSING! ❌
+      
+      This usually means:
+      1. all.yml (group_vars) failed to load
+      2. Inventory configuration issue
+      3. Required environment variable not set
+      
+      Check:
+      - Is your inventory correct? (-i inventories/hosts)
+      - Is all.yml in the right location?
+      - Did you provide env_file? (-e env_file=../.env)
+      
+      Run with -vvv to see which variable is undefined.
+    success_msg: "✅ All critical variables validated"
+
 # --- New: discover the latest HA release tag (override > latest > stable) ---
 - name: Fetch latest Home Assistant Core release from GitHub
   ansible.builtin.uri:
     url: https://api.github.com/repos/home-assistant/core/releases/latest
     method: GET
     return_content: true
-    headers: >-
-      {{
-        {'Authorization': 'Bearer ' + github_token}
-        if (github_token | default('') | length) > 0 else {}
-      }}
+    headers:
+      Authorization: "Bearer {{ github_pat }}"
   register: ha_release_latest
-  failed_when: false
+  failed_when: ha_release_latest.status not in [200, 304]
   changed_when: false
 
 - name: Parse latest tag into ha_latest (e.g. 2025.10.3)
@@ -249,7 +293,7 @@
   ansible.builtin.command:
     cmd: >
       docker compose
-      -p {{ ha_project | default('ha-stack-ansible') | quote }}
+      -p {{ ha_project | quote }}
       -f {{ ha_stack_dir }}/docker-compose.yml
       up -d
   args:
