Synchronize from controller to target (right user now)

--- a/inventories/group_vars/all.yml
+++ b/inventories/group_vars/all.yml
@@ -11,7 +11,7 @@ base_dir: "{{ base_home }}/homelab/target"
 ha_version: "stable"
 ha_version_override: ""
 ha_project: "ha-stack-ansible"
-ha_config_repo_dir: "{{ base_home }}/homelab/config/{{ ha_config_repo_subdir }}"
+ha_config_repo_dir: "{{ lookup('env', 'HOME') }}/homelab/config/{{ ha_config_repo_subdir }}"
 ha_config_dir: "{{ base_dir }}/homeassistant-ansible/config"
 ha_stack_dir:  "{{ base_dir }}/ha-stack-ansible"
 ha_backups_dir: "{{ ha_stack_dir }}/backup"
